--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "connect-your-tribe-profile-card",
   "version": "0.0.1",
   "description": "Redesign je visitekaartje op basis van een bestaande API.",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "app.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "start": "index"
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +26,7 @@
   "homepage": "https://github.com/fdnd-task/connect-your-tribe-profile-card#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "vercel": "^33.5.4"
   }
 }
