--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connect-your-tribe-profile-card",
   "version": "0.0.1",
   "description": "Redesign je visitekaartje op basis van een bestaande API.",
-  "main": "app.js",
+  "main": "index.js",
   "directories": {
     "doc": "docs"
   },
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/fdnd-task/connect-your-tribe-profile-card#readme",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "vercel": "^33.5.4"
   }
 }
