--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "connect-your-tribe-profile-card",
-  "version": "0.0.1",
-  "description": "Redesign je visitekaartje op basis van een bestaande API.",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "start": "index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fdnd-task/connect-your-tribe-profile-card.git"
-  },
-  "keywords": [
-    "node",
-    "express",
-    "ejs"
-  ],
-  "author": "J.P. Sturkenboom <j.p.sturkenboom@hva.nl>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fdnd-task/connect-your-tribe-profile-card/issues"
-  },
-  "homepage": "https://github.com/fdnd-task/connect-your-tribe-profile-card#readme",
-  "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "vercel": "^33.5.4"
-  }
+	"name": "profilecardyu-jing",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.4.3"
+	}
 }
