--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
-# Irritant bestand in elk mapje op macOS
-.DS_Store
-
-# Log bestanden
-logs
-*.logs
-npm-debug.log*
-
-# Alle node modules die gebruikt worden
 node_modules
 
-# Tijdelijke bestanden die door npm gebruikt worden
-.npm
-
-# Een geheim bestand met omgevingsvariabelen zoals API keys of wachtwoorden
-.env
+# Output
+.output
 .vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
